syntax = "proto3";

option csharp_namespace = "Realmar.Jobbernetes.Demo.GRPC.ExternalService";

package stepbased;


// this is the API of a spaceship vendor
// we want to scrap it and store the data in our own DB to do data mining
service ExternalSpaceshipVendorService {
	// Ingress service scrapes this API and ingests the IDs into the queue.
	// In this specific case, the ingress service itself is a job.
	//
	// returns a stream of available entities
	rpc GetSpaceships (SpaceshipsRequest) returns (stream IdMessage);

	// Job gets ids from the queue and retrieves their data. Then it puts
	// everything including the data back in to the queue.
	//
	// gets the entity
  rpc GetSpaceship (IdMessage) returns (SpaceshipReply);

	// Job gets entities which already have some data and checks
	// if there is additional data. If that is the case it adds
	// that data to the entitiy. After that it places the now
	// fully scraped entitiy back to the queue. Finally, the
	// egress service takes the complete entitiy and stores it in a DB.
	//
	// gets optional details
  rpc GetSpaceshipDetails (IdMessage) returns (SpaceshipDetailsReply);
}

message IdMessage{
	int32 id = 1;
}

message SpaceshipsRequest {
	int32 start_time_stamp = 1;
}

message SpaceshipReply {
	int32 id = 1;
}

message SpaceshipDetailsReply {
	int32 id = 1;
}
