syntax = "proto3";

option csharp_namespace = "Realmar.Jobbernetes.Demo.GRPC";

import 'Protos/Google/empty.proto';
import 'Protos/models.proto';

package services;


service ImageService {
	rpc GetImages (.google.protobuf.Empty) returns (stream .models.Image);
}
